# nya-sweeper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  config.h  readme.md
include/: resources.h  sweeper.h
source/: main.c  resources.c  sweeper.c
